feat: create key CLI command
